--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Futuristic Ltd.</title>
 </head>
 
-<body>
+<body class="container-xxl px-0">
   <nav class="navbar navbar-expand-lg bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="javascript:void(0)">
@@ -59,7 +59,7 @@
               <a class="nav-link" href="#">News</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="./contact.html">Contact</a>
             </li>
           </ul>
         </div>
