--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
     </div>
   </section>
   <article class="pb-3">
-    <section class="build pt-5"> </section>
+    <section style="padding-top: 20rem;" class="build text-center">
+      <h2 style="margin-top: -16rem;" class="fw-light text-light">SERVING NIGERIA GLOBALLY</h2>
+    </section>
     <div style="margin-top: -10rem;" class="d-flex flex-wrap gap-3 align-items-center justify-content-center">
       <div class="card" style="width: 20rem; height: 20rem;">
         <img src="./assets/construction-crane-1.jpg" class="card-img-top h-50" alt="...">
