--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,71 @@
       </div>
     </div>
   </nav>
+
+  <section style="margin-top: 5rem;" class="px-2 px-lg-4">
+    <h5 class="fw-light">CONTACT</h5>
+    <div class="d-flex align-items-center flex-wrap">
+      <div class="col-12 col-lg-6 d-flex justify-content-between align-items-center">
+        <div class="d-flex flex-column">
+          <h6 class="fw-bolder">Futuristic Ltd.</h6>
+          <span class="fw-light">1015 West Amelia Street, Orlando, FL 32805</span>
+          <span class="fw-light">Tel: <a href="tel:+2347063088668"
+              class="read-more text-decoration-none">+2347063088668</a></span>
+          <span class="fw-light">Email: <a href="mailto:info@futuristic.com"
+              class="read-more text-decoration-none">info@futuristic.com</a></span>
+        </div>
+        <img src="./assets/logo.jpg" alt="" style="width: 150px;">
+      </div>
+      <div class="col-12 col-lg-6 fw-light mt-5 mt-lg-0">
+        <p>
+          You can always visit us at our headquarters, we have a friendly staff and a mean cup of coffee. Or just stop
+          by to say hello to our mascot, Kaley.
+        </p>
+        <p>
+          Feel free to talk to one of our representatives at any time. Please use our contact form below or call our
+          office. Let us build your future together!
+        </p>
+      </div>
+    </div>
+    <div class="mt-5">
+      <section id="map">
+        <iframe class="w-100"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31522.842876300547!2d7.466242081759242!3d9.031311485953609!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0b7b45d0ed07%3A0x1006b0b33a363e2b!2sArea%201%20Shopping%20Centre%2C%20Moshood%20Abiola%20Rd%2C%20Garki%20900103%2C%20Abuja!5e0!3m2!1sen!2sng!4v1669133309987!5m2!1sen!2sng"
+          height="500px" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </section>
+      <div class="mt-5">
+        <h5 class="fw-light">PRE-QUALIFICATION REQUIREMENTS FOR BIDDERS</h5>
+        <span>Please click here to download our qualification criteria: <a href=""
+            class="read-more fw-bold">HJ-High-prequalification-form</a>
+        </span>
+        <form class="mt-4">
+          <label class="fw-light fs-5">SEND US A MESSAGE</label>
+          <div class="d-flex align-items-center flex-wrap">
+            <div class="col-12 col-lg-6 mt-4 px-2 px-lg-4">
+              <input type="text" name="" id="" class="form-control mb-3" placeholder="Name">
+              <input type="text" name="" id="" class="form-control mb-3" placeholder="Subject">
+              <input type="email" name="" id="" class="form-control mb-3" placeholder="Email">
+            </div>
+            <div class="col-12 col-lg-6 mt-lg-4 px-2 px-lg-4">
+              <textarea name="" id="" class="form-control" rows="5" style="resize: none;"
+                placeholder="Message"></textarea>
+            </div>
+          </div>
+          <input type="submit" value="SEND MESSAGE" class="btn btn-dark fw-light mt-3 d-block mx-auto">
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <footer class="mt-5 py-3 text-center text-white">
+    <span>© 2022 Futuristic LTD. • All rights reserved.</span>
+  </footer>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
