--- a/contact.html
+++ b/contact.html
@@ -73,11 +73,13 @@
       <div class="col-12 col-lg-6 d-flex justify-content-between align-items-center">
         <div class="d-flex flex-column">
           <h6 class="fw-bolder">Futuristic Ltd.</h6>
-          <span class="fw-light">1015 West Amelia Street, Orlando, FL 32805</span>
-          <span class="fw-light">Tel: <a href="tel:+2347063088668"
-              class="read-more text-decoration-none">+2347063088668</a></span>
-          <span class="fw-light">Email: <a href="mailto:info@futuristic.com"
-              class="read-more text-decoration-none">info@futuristic.com</a></span>
+          <span class="fw-light">Block H Sky Memorial Plaza, Michael Okpara Street, Wuse, Abuja - FCT.</span>
+          <span class="fw-light">Tel:
+            <a href="tel:+2347063088668" class="read-more text-decoration-none">+2347063088668</a>,
+            <a href="tel:+2348084504096" class="read-more text-decoration-none">+2348084504096</a>
+          </span>
+          <span class="fw-light">Email: <a href="mailto:fpcintleservices@yahoo.com"
+              class="read-more text-decoration-none">fpcintleservices@yahoo.com</a></span>
         </div>
         <img src="./assets/logo.jpg" alt="" style="width: 150px;">
       </div>
@@ -95,7 +97,7 @@
     <div class="mt-5">
       <section id="map">
         <iframe class="w-100"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31522.842876300547!2d7.466242081759242!3d9.031311485953609!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0b7b45d0ed07%3A0x1006b0b33a363e2b!2sArea%201%20Shopping%20Centre%2C%20Moshood%20Abiola%20Rd%2C%20Garki%20900103%2C%20Abuja!5e0!3m2!1sen!2sng!4v1669133309987!5m2!1sen!2sng"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3939.8609454781235!2d7.396379215288265!3d9.076430290742175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e75c8298de8c3%3A0xd3423efaf88b6898!2sZone%205%20Sky%20Memorial%20Complex!5e0!3m2!1sen!2sng!4v1669205223408!5m2!1sen!2sng"
           height="500px" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
@@ -124,7 +126,7 @@
   </section>
 
   <footer class="mt-5 py-3 text-center text-white">
-    <span>© 2022 Futuristic LTD. • All rights reserved.</span>
+    <span>© 2022 FUTURISTIC PROFESSIONALS CONSTRUCTION INT'L SERVICES LTD. • All rights reserved.</span>
   </footer>
 
 
