--- a/index.html
+++ b/index.html
@@ -70,14 +70,20 @@
   <section class="hero">
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="5000">
-          <img src="./assets/construction-crane-1.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-item active" data-bs-interval="3000">
+          <img src="./assets/asset-8-1.jpeg" class="d-block w-100" alt="...">
         </div>
-        <div class="carousel-item" data-bs-interval="10000">
-          <img src="./assets/construction-crane-2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./assets/asset-6.jpeg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./assets/asset-7.jpeg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./assets/asset-4.jpeg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./assets/construction-crane-3.jpg" class="d-block w-100" alt="...">
+          <img src="./assets/asset-5.jpeg" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -96,38 +102,26 @@
     </section>
     <div style="margin-top: -10rem;" class="d-flex flex-wrap gap-3 align-items-center justify-content-center">
       <div class="card" style="width: 20rem; height: 20rem;">
-        <img src="./assets/construction-crane-1.jpg" class="card-img-top h-50" alt="...">
+        <img src="./assets/asset-15.jpeg" class="card-img-top h-50" alt="...">
         <div class="card-body fw-light">
           <span class="fs-5 card-title d-block">BUILD TRUST</span>
-          <small class="card-text text-secondary d-block">Some quick example text to build on the card title and make
-            up
-            the
-            bulk of the card's
-            content.</small>
+          <small class="card-text text-secondary d-block">We handle each project as if it were our own.</small>
           <a href="#" style="text-decoration: none;" class="read-more d-inline-block">Read More</a>
         </div>
       </div>
       <div class="card" style="width: 20rem; height: 20rem;">
-        <img src="./assets/construction-crane-1.jpg" class="card-img-top h-50" alt="...">
+        <img src="./assets/asset-13.jpeg" class="card-img-top h-50" alt="...">
         <div class="card-body fw-light">
           <span class="fs-5 card-title d-block">BUILD QUALITY</span>
-          <small class="card-text text-secondary d-block">Some quick example text to build on the card title and make
-            up
-            the
-            bulk of the card's
-            content.</small>
+          <small class="card-text text-secondary d-block">We begin each project with the end in mind.</small>
           <a href="#" style="text-decoration: none;" class="read-more d-inline-block">Read More</a>
         </div>
       </div>
       <div class="card" style="width: 20rem; height: 20rem;">
-        <img src="./assets/construction-crane-1.jpg" class="card-img-top h-50" alt="...">
+        <img src="./assets/asset-14.jpeg" class="card-img-top h-50" alt="...">
         <div class="card-body fw-light">
           <span class="fs-5 card-title d-block">BUILD COMMUNITY</span>
-          <small class="card-text text-secondary d-block">Some quick example text to build on the card title and make
-            up
-            the
-            bulk of the card's
-            content.</small>
+          <small class="card-text text-secondary d-block">We strive to make a positive impact in our community.</small>
           <a href="#" style="text-decoration: none;" class="read-more d-inline-block">Read More</a>
         </div>
       </div>
@@ -138,7 +132,7 @@
     <div class=" mt-4">
       <div class="features-container">
         <div class="features-image position-relative mx-2 d-inline-block">
-          <img src="./assets/construction-crane-1.jpg" alt="" class="w-100 h-100">
+          <img src="./assets/asset-2.jpeg" alt="" class="w-100 h-100">
           <a href="#" style="left: 0;"
             class="hover-features text-decoration-none w-100 h-100 position-absolute bg-dark bg-opacity-50 top-0">
             <div class="text-white text-center d-flex align-items-center h-100 justify-content-center">
@@ -147,7 +141,7 @@
           </a>
         </div>
         <div class="features-image position-relative mx-2 d-inline-block">
-          <img src="./assets/construction-crane-1.jpg" alt="" class="w-100 h-100">
+          <img src="./assets/asset-12.jpeg" alt="" class="w-100 h-100">
           <a href="#" style="left: 0;"
             class="hover-features text-decoration-none w-100 h-100 position-absolute bg-dark bg-opacity-50 top-0">
             <div class="text-white text-center d-flex align-items-center h-100 justify-content-center">
@@ -156,7 +150,7 @@
           </a>
         </div>
         <div class="features-image position-relative mx-2 d-inline-block">
-          <img src="./assets/construction-crane-1.jpg" alt="" class="w-100 h-100">
+          <img src="./assets/asset-16.jpeg" alt="" class="w-100 h-100">
           <a href="#" style="left: 0;"
             class="hover-features text-decoration-none w-100 h-100 position-absolute bg-dark bg-opacity-50 top-0">
             <div class="text-white text-center d-flex align-items-center h-100 justify-content-center">
@@ -165,7 +159,7 @@
           </a>
         </div>
         <div class="features-image position-relative mx-2 d-inline-block">
-          <img src="./assets/construction-crane-1.jpg" alt="" class="w-100 h-100">
+          <img src="./assets/asset-17.jpeg" alt="" class="w-100 h-100">
           <a href="#" style="left: 0;"
             class="hover-features text-decoration-none w-100 h-100 position-absolute bg-dark bg-opacity-50 top-0">
             <div class="text-white text-center d-flex align-items-center h-100 justify-content-center">
@@ -174,7 +168,7 @@
           </a>
         </div>
         <div class="features-image position-relative mx-2 d-inline-block">
-          <img src="./assets/construction-crane-1.jpg" alt="" class="w-100 h-100">
+          <img src="./assets/asset-7.jpeg" alt="" class="w-100 h-100">
           <a href="#" style="left: 0;"
             class="hover-features text-decoration-none w-100 h-100 position-absolute bg-dark bg-opacity-50 top-0">
             <div class="text-white text-center d-flex align-items-center h-100 justify-content-center">
@@ -190,7 +184,7 @@
     <a href="" class="mt-3 btn btn-secondary">SERVICES WE OFFER</a>
   </section>
   <footer class="mt-5 py-3 text-center text-white">
-    <span>© 2022 Futuristic LTD. • All rights reserved.</span>
+    <span>© 2022 FUTURISTIC PROFESSIONALS CONSTRUCTION INT'L SERVICES LTD. • All rights reserved.</span>
   </footer>
 
 
