--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 
   <section style="margin-top: 5rem;" class="px-2 px-lg-4">
     <h5 class="fw-light">CONTACT</h5>
-    <div class="d-flex align-items-center flex-wrap">
+    <div class="mt-5 d-flex align-items-center flex-wrap">
       <div class="col-12 col-lg-6 d-flex justify-content-between align-items-center">
         <div class="d-flex flex-column">
           <h6 class="fw-bolder">Futuristic Ltd.</h6>
@@ -102,10 +102,10 @@
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
       <div class="mt-5">
-        <h5 class="fw-light">PRE-QUALIFICATION REQUIREMENTS FOR BIDDERS</h5>
+        <!-- <h5 class="fw-light">PRE-QUALIFICATION REQUIREMENTS FOR BIDDERS</h5>
         <span>Please click here to download our qualification criteria: <a href=""
             class="read-more fw-bold">HJ-High-prequalification-form</a>
-        </span>
+        </span> -->
         <form class="mt-4">
           <label class="fw-light fs-5">SEND US A MESSAGE</label>
           <div class="d-flex align-items-center flex-wrap">
