--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="/assets/logo.jpg">
+  <link rel="icon" type="image/x-icon" href="/assets/logo-bg.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/main.css">
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="javascript:void(0)">
         <div class="d-flex align-items-center">
-          <img id="logo" src="./assets/logo.jpg" alt="">
+          <img id="logo" src="./assets/logo.png" alt="">
           <span class="fs-4 fw-bold">Futuristic LTD.</span>
         </div>
       </a>
@@ -36,7 +36,7 @@
               <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="./about-us.html">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Services</a>
@@ -81,9 +81,9 @@
           <span class="fw-light">Email: <a href="mailto:fpcintleservices@yahoo.com"
               class="read-more text-decoration-none">fpcintleservices@yahoo.com</a></span>
         </div>
-        <img src="./assets/logo.jpg" alt="" style="width: 150px;">
+        <img src="./assets/logo.png" alt="" style="width: 100px;" class="px-2">
       </div>
-      <div class="col-12 col-lg-6 fw-light mt-5 mt-lg-0">
+      <div class="col-12 col-lg-6 fw-light mt-5 mt-lg-0 px-lg-3">
         <p>
           You can always visit us at our headquarters, we have a friendly staff and a mean cup of coffee. Or just stop
           by to say hello to our mascot, Kaley.
