--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="/assets/logo.jpg">
+  <link rel="icon" type="image/x-icon" href="/assets/logo-bg.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/main.css">
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="javascript:void(0)">
         <div class="d-flex align-items-center">
-          <img id="logo" src="./assets/logo.jpg" alt="">
+          <img id="logo" src="./assets/logo.png" alt="">
           <span class="fs-4 fw-bold">Futuristic LTD.</span>
         </div>
       </a>
@@ -36,7 +36,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="./about-us.html">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Services</a>
@@ -106,7 +106,7 @@
         <div class="card-body fw-light">
           <span class="fs-5 card-title d-block">BUILD TRUST</span>
           <small class="card-text text-secondary d-block">We handle each project as if it were our own.</small>
-          <a href="#" style="text-decoration: none;" class="read-more d-inline-block">Read More</a>
+          <a href="./about-us.html#trust" style="text-decoration: none;" class="read-more d-inline-block">Read More</a>
         </div>
       </div>
       <div class="card" style="width: 20rem; height: 20rem;">
@@ -114,7 +114,8 @@
         <div class="card-body fw-light">
           <span class="fs-5 card-title d-block">BUILD QUALITY</span>
           <small class="card-text text-secondary d-block">We begin each project with the end in mind.</small>
-          <a href="#" style="text-decoration: none;" class="read-more d-inline-block">Read More</a>
+          <a href="./about-us.html#quality" style="text-decoration: none;" class="read-more d-inline-block">Read
+            More</a>
         </div>
       </div>
       <div class="card" style="width: 20rem; height: 20rem;">
@@ -122,7 +123,8 @@
         <div class="card-body fw-light">
           <span class="fs-5 card-title d-block">BUILD COMMUNITY</span>
           <small class="card-text text-secondary d-block">We strive to make a positive impact in our community.</small>
-          <a href="#" style="text-decoration: none;" class="read-more d-inline-block">Read More</a>
+          <a href="./about-us.html#community" style="text-decoration: none;" class="read-more d-inline-block">Read
+            More</a>
         </div>
       </div>
     </div>
