--- a/services.html
+++ b/services.html
@@ -35,11 +35,11 @@
             <li class="nav-item">
               <a class="nav-link" href="./index.html">Home</a>
             </li>
-            <li class="nav-item" aria-current="page">
-              <a class="nav-link active" href="#">About Us</a>
-            </li>
             <li class="nav-item">
-              <a class="nav-link" href="./services.html">Services</a>
+              <a class="nav-link" href="./about-us.html">About Us</a>
+            </li>
+            <li class="nav-item" aria-current="page">
+              <a class="nav-link active" href="#">Services</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -68,36 +68,11 @@
   </nav>
 
   <section style="margin-top: 5rem; min-height: 85vh;" class="px-2 px-lg-4">
-    <h5 class="fw-light">ABOUT US</h5>
-    <div id="trust" class="mt-5 d-flex flex-wrap gap-3 align-items-center justify-content-center">
-      <div class="card" style="width: 20rem; height: 23rem;">
-        <img src="./assets/asset-15.jpeg" class="card-img-top h-50" alt="...">
-        <div class="card-body fw-light">
-          <span class="fs-5 card-title d-block">BUILD TRUST</span>
-          <small class="card-text text-secondary d-block">
-            We serve our clients by maintaining a moderate work load that allows us to fully commit resources, including
-            our company's principals, to serving our clients by insuring the success of our client's projects.
-          </small>
-        </div>
-      </div>
-      <div id="quality" class="card" style="width: 20rem; height: 23rem;">
-        <img src="./assets/asset-13.jpeg" class="card-img-top h-50" alt="...">
-        <div class="card-body fw-light">
-          <span class="fs-5 card-title d-block">BUILD QUALITY</span>
-          <small class="card-text text-secondary d-block">
-            Our great reputation is founded on our reliability, trust, and, above all, our integrity. We honor our
-            commitments and believe strongly that good old-fashioned “keeping your word” is what makes us different.
-          </small>
-        </div>
-      </div>
-      <div id="community" class="card" style="width: 20rem; height: 23rem;">
-        <img src="./assets/asset-14.jpeg" class="card-img-top h-50" alt="...">
-        <div class="card-body fw-light">
-          <span class="fs-5 card-title d-block">BUILD COMMUNITY</span>
-          <small class="card-text text-secondary d-block">
-            We take pride in our community and always have. Not only do we do business here, we live here. The is our
-            home and our community is very important to us so we take an active part in making it better.
-          </small>
+    <h5 class="fw-light">SERVICES</h5>
+    <div class="mt-5">
+      <div class="genral-con">
+        <div style="background: url('./assets/asset-1.jpeg') center;" class="py-4 text-center">
+          <span style="text-shadow: 2px 2px 5px black;" class="fs-5 fw-bold text-white ">GENERAL CONTRACTING</span>
         </div>
       </div>
     </div>
