--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="./about-us.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="./services.html">Services</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
