--- a/services.html
+++ b/services.html
@@ -74,6 +74,33 @@
         <div style="background: url('./assets/asset-1.jpeg') center;" class="py-4 text-center">
           <span style="text-shadow: 2px 2px 5px black;" class="fs-5 fw-bold text-white ">GENERAL CONTRACTING</span>
         </div>
+        <div class="service-text mt-3 pb-3 d-flex align-items-center justify-content-between flex-wrap">
+          <div class="col-12 col-lg-6">
+            <img src="./assets/asset-17.jpeg" alt="">
+            <p class="fw-light">
+              <span class="d-block mt-4 mb-3">The Traditional Delivery Method</span>
+              <small>
+                Futuristic Ltd. is a fully licensed, insured, and bondable commercial general contractor. With this
+                traditional delivery method, Futuristic Ltd. usually joins the project team at the conclusion of the
+                design
+                phase. General contracting services typically provide owners with a traditional design-bid-build
+                approach for their construction projects. Futuristic Ltd. can also perform general contracting
+                assignments on
+                either a negotiated contract or bid basis.
+                General contracting is best for straightforward projects that have minimal changes or projects with
+                strict policies requiring lump sum bids. We have established relationships with trade contractors
+                founded on trust and experience and extensive market knowledge which enable us to be extremely
+                competitive while providing unsurpassed quality.
+              </small>
+            </p>
+          </div>
+          <div class="col-12 col-lg-6 ps-lg-2">
+            <div class="gallery d-flex align-items-center justify-content-between flex-wrap gap-2">
+              <img src="./assets/asset-16.jpeg" alt="" class="col-6 col-lg-12">
+              <img src="./assets/asset-19.jpeg" alt="" class="col-6 col-lg-12">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
