--- a/index.html
+++ b/index.html
@@ -70,8 +70,16 @@
   <section class="hero">
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="3000">
+        <div class="carousel-item active position-relative" data-bs-interval="1000000">
           <img src="./assets/asset-8-1.jpeg" class="d-block w-100" alt="...">
+          <div style="left: 0;" class="position-absolute h-100 w-100 bg-dark bg-opacity-75 top-0">
+            <div
+              class="col-8 mt-4 mt-md-0 col-md-12 mx-auto d-flex flex-column text-white align-items-center justify-content-center h-100 text-center">
+              <i style="color: #0dcaf091;" class="mb-3">Greetings</i>
+              <h2>HELLO, WE ARE FUTURISTIC </h2>
+              <i class="btn btn-info rounded-5 text-white">Let's build the future together.</i>
+            </div>
+          </div>
         </div>
         <div class="carousel-item" data-bs-interval="3000">
           <img src="./assets/asset-6.jpeg" class="d-block w-100" alt="...">
@@ -138,7 +146,7 @@
           <a href="#" style="left: 0;"
             class="hover-features text-decoration-none w-100 h-100 position-absolute bg-dark bg-opacity-50 top-0">
             <div class="text-white text-center d-flex align-items-center h-100 justify-content-center">
-              <span>Construction at Gwarinpa</span>
+              <span>Featured works</span>
             </div>
           </a>
         </div>
@@ -147,7 +155,7 @@
           <a href="#" style="left: 0;"
             class="hover-features text-decoration-none w-100 h-100 position-absolute bg-dark bg-opacity-50 top-0">
             <div class="text-white text-center d-flex align-items-center h-100 justify-content-center">
-              <span>Construction at Gwarinpa</span>
+              <span>Featured works</span>
             </div>
           </a>
         </div>
@@ -156,7 +164,7 @@
           <a href="#" style="left: 0;"
             class="hover-features text-decoration-none w-100 h-100 position-absolute bg-dark bg-opacity-50 top-0">
             <div class="text-white text-center d-flex align-items-center h-100 justify-content-center">
-              <span>Construction at Gwarinpa</span>
+              <span>Featured works</span>
             </div>
           </a>
         </div>
@@ -165,7 +173,7 @@
           <a href="#" style="left: 0;"
             class="hover-features text-decoration-none w-100 h-100 position-absolute bg-dark bg-opacity-50 top-0">
             <div class="text-white text-center d-flex align-items-center h-100 justify-content-center">
-              <span>Construction at Gwarinpa</span>
+              <span>Featured works</span>
             </div>
           </a>
         </div>
@@ -174,7 +182,7 @@
           <a href="#" style="left: 0;"
             class="hover-features text-decoration-none w-100 h-100 position-absolute bg-dark bg-opacity-50 top-0">
             <div class="text-white text-center d-flex align-items-center h-100 justify-content-center">
-              <span>Construction at Gwarinpa</span>
+              <span>Featured works</span>
             </div>
           </a>
         </div>
@@ -182,8 +190,8 @@
     </div>
   </section>
   <section id="service-ad" class="text-center mt-4 d-flex flex-column align-items-center justify-content-center">
-    <span class="fs-3 text-light">FROM ESTIMATING TO PLANNING TO BUILDING</span>
-    <a href="" class="mt-3 btn btn-secondary">SERVICES WE OFFER</a>
+    <span class="fs-3 text-light">FROM PLANNING TO DESIGN TO ESTIMATING TO CONSTRUCTION</span>
+    <a href="./services.html" class="mt-3 btn btn-secondary">SERVICES WE OFFER</a>
   </section>
   <footer class="mt-5 py-3 text-center text-white">
     <span>© 2022 FUTURISTIC PROFESSIONALS CONSTRUCTION INT'L SERVICES LTD. • All rights reserved.</span>
