--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
 <body class="container-xxl px-0">
   <nav class="navbar navbar-expand-lg bg-light fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="javascript:void(0)">
+      <a class="navbar-brand" href="./index.html">
         <div class="d-flex align-items-center">
           <img id="logo" src="./assets/logo.png" alt="">
           <span class="fs-4 fw-bold">Futuristic LTD.</span>
@@ -70,7 +70,7 @@
   <section style="margin-top: 5rem; min-height: 85vh;" class="px-2 px-lg-4">
     <h5 class="fw-light">SERVICES</h5>
     <div class="mt-5">
-      <div class="genral-con">
+      <div class="genral-con p-2 bg-secondary bg-opacity-25">
         <div style="background: url('./assets/asset-1.jpeg') center;" class="py-4 text-center">
           <span style="text-shadow: 2px 2px 5px black;" class="fs-5 fw-bold text-white ">GENERAL CONTRACTING</span>
         </div>
@@ -95,9 +95,9 @@
             </p>
           </div>
           <div class="col-12 col-lg-6 ps-lg-2">
-            <div class="gallery d-flex align-items-center justify-content-between flex-wrap gap-2">
-              <img src="./assets/asset-16.jpeg" alt="" class="col-6 col-lg-12">
-              <img src="./assets/asset-19.jpeg" alt="" class="col-6 col-lg-12">
+            <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
+              <img src="./assets/asset-16.jpeg" alt="" class="col-6 col-lg-12 px-1">
+              <img src="./assets/asset-19.jpeg" alt="" class="col-6 col-lg-12 px-1">
             </div>
           </div>
         </div>
