--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <body class="container-xxl px-0">
   <nav class="navbar navbar-expand-lg bg-light fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="javascript:void(0)">
+      <a class="navbar-brand" href="./index.html">
         <div class="d-flex align-items-center">
           <img id="logo" src="./assets/logo.png" alt="">
           <span class="fs-4 fw-bold">Futuristic LTD.</span>
