--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                 Portfolio
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="./commercial.html">Commercial</a></li>
+                <!-- <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li> -->
               </ul>
             </li>
             <li class="nav-item">
@@ -71,7 +71,7 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active position-relative" data-bs-interval="1000000">
-          <img src="./assets/asset-8-1.jpeg" class="d-block w-100" alt="...">
+          <img src="./assets/asset-10.jpeg" class="d-block w-100" alt="...">
           <div style="left: 0;" class="position-absolute h-100 w-100 bg-dark bg-opacity-75 top-0">
             <div
               class="col-8 mt-4 mt-md-0 col-md-12 mx-auto d-flex flex-column text-white align-items-center justify-content-center h-100 text-center">
