--- a/services.html
+++ b/services.html
@@ -47,12 +47,12 @@
                 Portfolio
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="./commercial.html">Commercial</a></li>
+                <!-- <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li> -->
               </ul>
             </li>
             <li class="nav-item">
@@ -71,7 +71,7 @@
     <h5 class="fw-light">SERVICES</h5>
     <div class="mt-5">
       <div class="genral-con p-2 bg-secondary bg-opacity-25">
-        <div style="background: url('./assets/asset-1.jpeg') center;" class="py-4 text-center">
+        <div style="background: url('./assets/asset-2.jpeg') center;" class="py-4 text-center">
           <span style="text-shadow: 2px 2px 5px black;" class="fs-5 fw-bold text-white ">GENERAL CONTRACTING</span>
         </div>
         <div class="service-text mt-3 pb-3 d-flex align-items-center justify-content-between flex-wrap">
@@ -96,8 +96,103 @@
           </div>
           <div class="col-12 col-lg-6 ps-lg-2">
             <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
-              <img src="./assets/asset-16.jpeg" alt="" class="col-6 col-lg-12 px-1">
-              <img src="./assets/asset-19.jpeg" alt="" class="col-6 col-lg-12 px-1">
+              <img src="./assets/asset-16.jpeg" alt="" class="col-6 col-lg-12 px-1 pb-lg-1">
+              <img src="./assets/asset-19.jpeg" alt="" class="col-6 col-lg-12 px-1 pt-lg-1">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-3 pre-con p-2 bg-secondary bg-opacity-25">
+        <div style="background: url('./assets/asset-2.jpeg') center;" class="py-4 text-center">
+          <span style="text-shadow: 2px 2px 5px black;"
+            class="fs-5 fw-bold text-white text-uppercase">Pre-Construction</span>
+        </div>
+        <div class="service-text mt-3 pb-3 d-flex align-items-center justify-content-between flex-wrap">
+          <div class="col-12 col-lg-6">
+            <img src="./assets/asset-10.jpeg" alt="">
+            <p class="fw-light">
+              <span class="d-block mt-4 mb-3">Laying the Groundwork</span>
+              <small>
+                Based on the client's operation requirements we develop a thorough building, infrastructure and location
+                needs analysis which creates the groundwork for a formal site and facility selection.
+                This may include:
+                • Location studies
+                • Suitable site selection
+                • Process layout design
+                • Studies on building requirements
+                • Architectural pre-design
+                • Permit requirement analysis
+                • Civil pre-design
+                • Utility Analysis
+                • Budget forecasting
+                Our team's project development includes general project planning, phasing and logistics, manpower and
+                resource loading studies, cash flow analysis, detailed preconstruction and construction scheduling,
+                material, and means and methods research. From pre-design, through design to final construction, we
+                manage the schedule, cost, quality and scope to minimize the 's risk.
+              </small>
+            </p>
+          </div>
+          <div class="col-12 col-lg-6 ps-lg-2">
+            <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
+              <img src="./assets/asset-11.jpeg" alt="" class="col-6 col-lg-12 px-1 pb-lg-1">
+              <img src="./assets/asset-17.jpeg" alt="" class="col-6 col-lg-12 px-1 pt-lg-1">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-3 design-build p-2 bg-secondary bg-opacity-25">
+        <div style="background: url('./assets/asset-2.jpeg') center;" class="py-4 text-center">
+          <span style="text-shadow: 2px 2px 5px black;"
+            class="fs-5 fw-bold text-white text-uppercase">Design-Build</span>
+        </div>
+        <div class="service-text mt-3 pb-3 d-flex align-items-center justify-content-between flex-wrap">
+          <div class="col-12 col-lg-6">
+            <img src="./assets/asset-20.jpeg" alt="">
+            <p class="fw-light">
+              <span class="d-block mt-4 mb-3">What is Design-Build?</span>
+              <small>
+                Design-Build is a construction delivery method that provides owners with a single point of contact for
+                both the design and construction phases of a project. One entity holds single-source responsibility and
+                contractual risk for every aspect of a build — from estimation, assessments and pre-construction to
+                architecture, schematics, engineering, subcontracting, construction and post-construction. This entity,
+                the Design-Builder, manages all contracts with companies, such as subcontractors, equipment vendors and
+                materials providers.
+              </small>
+            </p>
+          </div>
+          <div class="col-12 col-lg-6 ps-lg-2">
+            <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
+              <img src="./assets/asset-13.jpeg" alt="" class="col-6 col-lg-12 px-1 pb-lg-1">
+              <img src="./assets/asset-10.jpeg" alt="" class="col-6 col-lg-12 px-1 pt-lg-1">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-3 pre-con p-2 bg-secondary bg-opacity-25">
+        <div style="background: url('./assets/asset-2.jpeg') center;" class="py-4 text-center">
+          <span style="text-shadow: 2px 2px 5px black;" class="fs-5 fw-bold text-white text-uppercase">Construction
+            Management</span>
+        </div>
+        <div class="service-text mt-3 pb-3 d-flex align-items-center justify-content-between flex-wrap">
+          <div class="col-12 col-lg-6">
+            <img src="./assets/asset-4.jpeg" alt="">
+            <p class="fw-light">
+              <span class="d-block mt-4 mb-3">We are Here from Start to Finish</span>
+              <small>
+                Futuristic Ltd. acts as consultant to the owner in the development and design phases, but serves the
+                role of
+                general contractor during the construction phase. Working with the architect and engineers, our role is
+                to bring value to the project by achieving optimum cost, schedule and product quality. We provide
+                construction-management services either as an agent for the owner, whereby the client holds all the
+                trade contracts, or on an at-risk basis, whereby Futuristic Ltd. holds all the trade contracts and is
+                responsible for guaranteeing performance.
+              </small>
+            </p>
+          </div>
+          <div class="col-12 col-lg-6 ps-lg-2">
+            <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
+              <img src="./assets/asset-5.jpeg" alt="" class="col-6 col-lg-12 px-1 pb-lg-1">
+              <img src="./assets/asset-6.jpeg" alt="" class="col-6 col-lg-12 px-1 pt-lg-1">
             </div>
           </div>
         </div>
