--- a/commercial.html
+++ b/commercial.html
@@ -49,8 +49,8 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Commercial</a></li>
-                <!-- <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
+                <li><a class="dropdown-item" href="./videos.html">Videos</a></li>
+                <!--  <li>
                   <hr class="dropdown-divider">
                 </li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li> -->
