--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,8 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="./commercial.html">Commercial</a></li>
-                <!-- <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
+                <li><a class="dropdown-item" href="./videos.html">Videos</a></li>
+                <!--  <li>
                   <hr class="dropdown-divider">
                 </li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li> -->
