--- a/services.html
+++ b/services.html
@@ -69,8 +69,111 @@
 
   <section style="margin-top: 5rem; min-height: 85vh;" class="px-2 px-lg-4">
     <h5 class="fw-light">SERVICES</h5>
+    <span>Futuristic Ltd is a Nigerian company offering holistic professional services covering the Planning, Design,
+      Engineering, Construction, Operation and Maintenance of Buildings, Infrastructure and Industry Projects.</span>
+    <span class="mt-2 d-block">We adhere to the highest standards for quality and safety. To maintain excellence in
+      construction, we continuously build on our robust experience and strong technical expertise through development
+      and innovation.</span>
+    <span class="mt-2 d-block">We have the skills to deliver quality results, on Time and within Budget, no matter the
+      project scope or challenge. Our expertise is bolstered by our highly experienced staff and our commitment to
+      implementing innovative solutions towards construction challenges.</span>
     <div class="mt-5">
-      <div class="genral-con p-2 bg-secondary bg-opacity-25">
+
+      <div class="mt-3 pre-con p-2 bg-secondary bg-opacity-25">
+        <div style="background: url('./assets/asset-2.jpeg') center;" class="py-4 text-center">
+          <span style="text-shadow: 2px 2px 5px black;" class="fs-5 fw-bold text-white text-uppercase">INDUSTRIAL &
+            RESIDENTIAL BUILDING CONSTRUCTION</span>
+        </div>
+        <div class="service-text mt-3 pb-3 d-flex align-items-center justify-content-between flex-wrap">
+          <div class="col-12 col-lg-6">
+            <img src="./assets/asset-10.jpeg" alt="">
+            <p class="fw-light">
+              <span class="d-block mt-4 mb-3">Laying the Groundwork</span>
+              <small>
+                Futuristic Ltd constructs all kinds of Residential and Industrial buildings for clients.
+              </small>
+            </p>
+          </div>
+          <div class="col-12 col-lg-6 ps-lg-2">
+            <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
+              <img src="./assets/asset-11.jpeg" alt="" class="col-6 col-lg-12 px-1 pb-lg-1">
+              <img src="./assets/asset-17.jpeg" alt="" class="col-6 col-lg-12 px-1 pt-lg-1">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-3 design-build p-2 bg-secondary bg-opacity-25">
+        <div style="background: url('./assets/asset-2.jpeg') center;" class="py-4 text-center">
+          <span style="text-shadow: 2px 2px 5px black;" class="fs-5 fw-bold text-white text-uppercase">INFRASTRUCTURAL &
+            TOWN DEVELOPMENT</span>
+        </div>
+        <div class="service-text mt-3 pb-3 d-flex align-items-center justify-content-between flex-wrap">
+          <div class="col-12 col-lg-6">
+            <img src="./assets/infrastructure.jpeg" alt="">
+            <p class="fw-light">
+              <!-- <span class="d-block mt-4 mb-3">What is Design-Build?</span> -->
+              <small class="d-block mt-4">
+                Futuristic Ltd constructs any kind of infrastructural & town developmental project or contracts.
+              </small>
+            </p>
+          </div>
+          <div class="col-12 col-lg-6 ps-lg-2">
+            <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
+              <img src="./assets/asset-4.jpeg" alt="" class="col-6 col-lg-12 px-1 pb-lg-1">
+              <img src="./assets/asset-7.jpeg" alt="" class="col-6 col-lg-12 px-1 pt-lg-1">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-3 pre-con p-2 bg-secondary bg-opacity-25">
+        <div style="background: url('./assets/asset-2.jpeg') center;" class="py-4 text-center">
+          <span style="text-shadow: 2px 2px 5px black;" class="fs-5 fw-bold text-white text-uppercase">IRRIGATION &
+            DRAINAGE SCHEME CONSTRUCTION</span>
+        </div>
+        <div class="service-text mt-3 pb-3 d-flex align-items-center justify-content-between flex-wrap">
+          <div class="col-12 col-lg-6">
+            <img src="./assets/drainage-1.jpeg" alt="">
+            <p class="fw-light">
+              <!-- <span class="d-block mt-4 mb-3">We are Here from Start to Finish</span> -->
+              <small class="d-block mt-4">
+                Futuristic Ltd takes irrigation and drainage projects of different capacities.
+              </small>
+            </p>
+          </div>
+          <div class="col-12 col-lg-6 ps-lg-2">
+            <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
+              <img src="./assets/drainage-2.jpeg" alt="" class="col-6 col-lg-12 px-1 pb-lg-1">
+              <img src="./assets/drainage-3.jpeg" alt="" class="col-6 col-lg-12 px-1 pt-lg-1">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-3 pre-con p-2 bg-secondary bg-opacity-25">
+        <div style="background: url('./assets/asset-2.jpeg') center;" class="py-4 text-center">
+          <span style="text-shadow: 2px 2px 5px black;" class="fs-5 fw-bold text-white text-uppercase">WATER TREATMENT
+            PLANT CONSTRUCTION.</span>
+        </div>
+        <div class="service-text mt-3 pb-3 d-flex align-items-center justify-content-between flex-wrap">
+          <div class="col-12 col-lg-6">
+            <img src="./assets/drainage-1.jpeg" alt="">
+            <p class="fw-light">
+              <!-- <span class="d-block mt-4 mb-3">We are Here from Start to Finish</span> -->
+              <small class="d-block mt-4">
+                Futuristic Ltd constructs Raw water treatment plants aside been actively involved in developing
+                any kind of infrastructure for industrial & residential use. As professionals, we have the capacity to
+                embark on construction of any Raw Water treatment plant anywhere on time and within budget.
+              </small>
+            </p>
+          </div>
+          <div class="col-12 col-lg-6 ps-lg-2">
+            <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
+              <img src="./assets/drainage-2.jpeg" alt="" class="col-6 col-lg-12 px-1 pb-lg-1">
+              <img src="./assets/drainage-3.jpeg" alt="" class="col-6 col-lg-12 px-1 pt-lg-1">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-3 genral-con p-2 bg-secondary bg-opacity-25">
         <div style="background: url('./assets/asset-2.jpeg') center;" class="py-4 text-center">
           <span style="text-shadow: 2px 2px 5px black;" class="fs-5 fw-bold text-white ">GENERAL CONTRACTING</span>
         </div>
@@ -98,101 +201,6 @@
             <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
               <img src="./assets/asset-16.jpeg" alt="" class="col-6 col-lg-12 px-1 pb-lg-1">
               <img src="./assets/asset-19.jpeg" alt="" class="col-6 col-lg-12 px-1 pt-lg-1">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="mt-3 pre-con p-2 bg-secondary bg-opacity-25">
-        <div style="background: url('./assets/asset-2.jpeg') center;" class="py-4 text-center">
-          <span style="text-shadow: 2px 2px 5px black;"
-            class="fs-5 fw-bold text-white text-uppercase">Pre-Construction</span>
-        </div>
-        <div class="service-text mt-3 pb-3 d-flex align-items-center justify-content-between flex-wrap">
-          <div class="col-12 col-lg-6">
-            <img src="./assets/asset-10.jpeg" alt="">
-            <p class="fw-light">
-              <span class="d-block mt-4 mb-3">Laying the Groundwork</span>
-              <small>
-                Based on the client's operation requirements we develop a thorough building, infrastructure and location
-                needs analysis which creates the groundwork for a formal site and facility selection.
-                This may include:
-                • Location studies
-                • Suitable site selection
-                • Process layout design
-                • Studies on building requirements
-                • Architectural pre-design
-                • Permit requirement analysis
-                • Civil pre-design
-                • Utility Analysis
-                • Budget forecasting
-                Our team's project development includes general project planning, phasing and logistics, manpower and
-                resource loading studies, cash flow analysis, detailed preconstruction and construction scheduling,
-                material, and means and methods research. From pre-design, through design to final construction, we
-                manage the schedule, cost, quality and scope to minimize the 's risk.
-              </small>
-            </p>
-          </div>
-          <div class="col-12 col-lg-6 ps-lg-2">
-            <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
-              <img src="./assets/asset-11.jpeg" alt="" class="col-6 col-lg-12 px-1 pb-lg-1">
-              <img src="./assets/asset-17.jpeg" alt="" class="col-6 col-lg-12 px-1 pt-lg-1">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="mt-3 design-build p-2 bg-secondary bg-opacity-25">
-        <div style="background: url('./assets/asset-2.jpeg') center;" class="py-4 text-center">
-          <span style="text-shadow: 2px 2px 5px black;"
-            class="fs-5 fw-bold text-white text-uppercase">Design-Build</span>
-        </div>
-        <div class="service-text mt-3 pb-3 d-flex align-items-center justify-content-between flex-wrap">
-          <div class="col-12 col-lg-6">
-            <img src="./assets/asset-20.jpeg" alt="">
-            <p class="fw-light">
-              <span class="d-block mt-4 mb-3">What is Design-Build?</span>
-              <small>
-                Design-Build is a construction delivery method that provides owners with a single point of contact for
-                both the design and construction phases of a project. One entity holds single-source responsibility and
-                contractual risk for every aspect of a build — from estimation, assessments and pre-construction to
-                architecture, schematics, engineering, subcontracting, construction and post-construction. This entity,
-                the Design-Builder, manages all contracts with companies, such as subcontractors, equipment vendors and
-                materials providers.
-              </small>
-            </p>
-          </div>
-          <div class="col-12 col-lg-6 ps-lg-2">
-            <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
-              <img src="./assets/asset-13.jpeg" alt="" class="col-6 col-lg-12 px-1 pb-lg-1">
-              <img src="./assets/asset-10.jpeg" alt="" class="col-6 col-lg-12 px-1 pt-lg-1">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="mt-3 pre-con p-2 bg-secondary bg-opacity-25">
-        <div style="background: url('./assets/asset-2.jpeg') center;" class="py-4 text-center">
-          <span style="text-shadow: 2px 2px 5px black;" class="fs-5 fw-bold text-white text-uppercase">Construction
-            Management</span>
-        </div>
-        <div class="service-text mt-3 pb-3 d-flex align-items-center justify-content-between flex-wrap">
-          <div class="col-12 col-lg-6">
-            <img src="./assets/asset-4.jpeg" alt="">
-            <p class="fw-light">
-              <span class="d-block mt-4 mb-3">We are Here from Start to Finish</span>
-              <small>
-                Futuristic Ltd. acts as consultant to the owner in the development and design phases, but serves the
-                role of
-                general contractor during the construction phase. Working with the architect and engineers, our role is
-                to bring value to the project by achieving optimum cost, schedule and product quality. We provide
-                construction-management services either as an agent for the owner, whereby the client holds all the
-                trade contracts, or on an at-risk basis, whereby Futuristic Ltd. holds all the trade contracts and is
-                responsible for guaranteeing performance.
-              </small>
-            </p>
-          </div>
-          <div class="col-12 col-lg-6 ps-lg-2">
-            <div class="gallery d-flex align-items-center justify-content-between flex-wrap">
-              <img src="./assets/asset-5.jpeg" alt="" class="col-6 col-lg-12 px-1 pb-lg-1">
-              <img src="./assets/asset-6.jpeg" alt="" class="col-6 col-lg-12 px-1 pt-lg-1">
             </div>
           </div>
         </div>
